--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,176 @@
 /* body{
     display: flex;
 } */
+
+/* Define some variables to use later */
+:root{
+    --std-border-color: rgb(34, 25, 46);
+    --std-border-thickness: 1px;
+    --std-border-radius: 5px;
+    --dark: #666;
+    --light: #CCC;
+    --light-darker: #b3b3b3;
+    --dark-lighter: #8d8d8d;
+    --background-color: #1f2441;
+    --std-background-img: url('../img/portfolio-header-bgimg.jpg');
+}
+/* Some default styling for the webpage */
 body, html {
     height: 100%;
-    line-height: 1.8em;
+    line-height: 1.6em;
     font-weight: 400;
     font-family:"Andale Mono", "Lato", sans-serif;
+    color:var(--light);
+    background-color: var(--light);
 }
+/* Some default styling to links */
 a{
     text-decoration: none;
     color:inherit;
-    border: 1px solid #000;
     padding: 0px 4px;
 }
+
+.header{
+    color: var(--background-color);
+}
+
+/* Some different styling for the header links */
+.header-link{
+    display:inline;
+    border: var(--std-border-thickness) solid var(--light-darker);
+    border-radius: var(--std-border-radius);
+}
+
+/* Add parallax and styling to parallax imgs, including transparency*/
+.parallax-img{
+    position:relative;
+    opacity:0.7;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+/* Add styling to the sections that divide the image areas */
+.section-divider{
+    background-color: var(--background-color);
+    text-align:center;
+    padding: 50px 80px;
+}
+
+/* Add background image and styling to the header section */
+.parallax-img-header{
+    background-image: var(--std-background-img);
+    min-height: 100%;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
+
+header{
+    display:flex;
+    flex-flow:row wrap;
+    font-weight: 600;
+}
+
+.header-flex{
+    position:relative;
+    left:-0%;
+}
+
+#hello{
+    position:relative;
+    font-size:200%;
+}
+#myname{
+    position:relative;
+
+}
+#biz{
+    position:relative;
+    font-size:600%;
+    right:-1em;
+    top:-.5em;
+}
+
+#code-things{
+    display:none;
+}
+
+.header-nav{
+    position:relative;
+    right:-4em;
+    position:relative;
+    right:-9em;
+    top:-7em;
+}
+
+.header-link{
+    font-size: 700%;
+    padding:40px 0px;
+    margin: 30px 0px;
+    display:block;
+}
+
+/* Add stlying to text that cover parallax images */
+.parallax-img-text{
+    position:absolute;
+    top:20%;
+    width:100%;
+    text-align: center;
+    color: var(--dark);
+    font-size:27px;
+    letter-spacing:8px;
+    text-transform: uppercase;
+    background-color: var(--background-color);
+}
+
+/* Add styling to the background of the text over the images*/
+.parallax-img-text .parallax-img-border{
+    padding: 20px;
+}
+
+/* .after-header{
+    height:20%;
+} */
+
+.parallax-img-projects{
+    background-image: url('../img/plh-code-on-screen.jpg');
+    min-height: 70%;
+}
+
+.parallax-img-about-me{
+    background-image: url('../img/plh-large-code-block.jpg');
+    min-height: 70%;
+}
+
+.parallax-img-contact{
+    background-image: var(--std-background-img);
+    min-height: 70%;
+}
+.parallax-img-footer{
+    background-image: var(--std-background-img);
+    min-height:20%;
+}
+@media (max-width: 1024px){
+    .parallax-img{
+        background-attachment: unset;
+    }
+}
+/* Disable parallax on mobile devices */
+@media (max-width: 955px){
+    .header-text{
+        position: unset;
+    }
+    #code-things{
+        display:block;
+    }
+    .header-nav{
+        display:none;
+    }
+    /* TODO: A hidden navbar for mobile */
+}
+
 /* .parallax-img-header{
     background-image:url('../img/plh-code-on-laptop.jpg');
     min-height:100%;
