--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,10 @@ a{
     border: var(--std-border-thickness) solid var(--dark-lighter);
     border-radius: var(--std-border-radius);
     transition: 0.5s;
+    font-size: 700%;
+    padding:40px 0px;
+    margin: 30px 0px;
+    display:block;
 }
 
 .header-link:hover{
@@ -133,14 +137,6 @@ rest of the header text below */
     top:-7em;
 }
 
-/* Allows movement of the links spereatly from the text in the header-nav div */
-.header-link{
-    font-size: 700%;
-    padding:40px 0px;
-    margin: 30px 0px;
-    display:block;
-}
-
 /* Add stlying to text that cover parallax images */
 .parallax-img-text{
     position:absolute;
@@ -195,6 +191,10 @@ rest of the header text below */
     box-shadow: 10px 1em 1em var(--gradient-max);
 }
 
+#first-card{
+    flex: 1 2 45%;
+}
+
 .card-image-link{
     padding:0% var(--card-img-width) var(--card-img-height) 0%;
 }
@@ -236,6 +236,10 @@ rest of the header text below */
     height: var(--card-img-height);
     width: var(--card-img-width);
     transition: 0.3s;
+}
+
+#first-card .card-content{
+    width: 98%;
 }
 
 .card-content:hover{
@@ -313,10 +317,57 @@ rest of the header text below */
     min-height: 70%;
 }
 
-/* Background image and size for footer section */
-.parallax-img-footer{
-    background-image: var(--std-background-img);
-    min-height:20%;
+.contact-nav{
+    display: flex;
+    flex: 2 0 200;
+    flex-direction: column;
+    align-items: center;
+}
+
+.contact-link{
+    font-size: 400%;
+    border: var(--std-border-thickness) solid var(--dark-lighter);
+    border-radius: var(--std-border-radius);
+    padding:40px 0px ;
+    margin: 25px 0px 5px 0px;
+    transition:0.5s;
+    width: 50%;
+    text-align: center;
+    color: var(--background-color);
+    line-height: 0.8;
+}
+
+.contact-link-desc{
+    color:var(--background-color);
+}
+
+.contact-link:hover{
+    border: var(--std-border-thickness) solid var(--light-darker);
+    text-shadow: var(--gradient-max) 1px 0 10px;
+    box-shadow: inset var(--gradient-max) 1px 0 10px;
+}
+
+
+.mailto-link:hover::after{
+    position:absolute;
+    content: "📧"
+}
+
+.tel-link:hover::after{
+    position:absolute;
+    content: "📱"
+}
+
+footer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 6%;
+    background-color: var(--background-color);
+    color:var(--light);
+    font-size: 200%;
+    text-align: center;
+    width: 100%;
 }
 
 @media only screen and (max-height: 1000px) and (min-width: 956px){
@@ -364,6 +415,10 @@ contains any changes for tablets and small laptops. */
     }
     .text-container{
         width:90%;
+    }
+    .contact-link{
+        font-size: 200%;
+        width: 70%;
     }
     /* TODO: A differently styled navbar for tablets and small laptops */
 }
